Closed
Bug 1342869
Opened 9 years ago
Closed 9 years ago
stylo Assertion failure: child->mParent == this (We have a unique inner!), at StyleSheet.cpp:86
Categories
(Core :: Layout, defect)
Core
Layout
Tracking
()
RESOLVED
FIXED
mozilla55
| Tracking | Status | |
|---|---|---|
| firefox52 | --- | unaffected |
| firefox-esr52 | --- | unaffected |
| firefox53 | --- | unaffected |
| firefox54 | --- | disabled |
| firefox55 | --- | fixed |
People
(Reporter: cbook, Assigned: bradwerth)
References
()
Details
(Keywords: assertion)
Attachments
(1 file)
found via topsite stests with bughunter and reproduced on latest stylo debug build from tinderbox
Assertion failure: child->mParent == this (We have a unique inner!), at /home/worker/workspace/build/src/layout/style/StyleSheet.cpp:86
Steps to reproduce:
-> Load http://www.coupons.com (and seems to happen on a lot of other urls)
---> Assertion failure
Comment 1•9 years ago
|
||
This looks related to the work that Brad's been doing.
Flags: needinfo?(bwerth)
| Assignee | ||
Comment 2•9 years ago
|
||
Agreed. I'll figure it out.
Assignee: nobody → bwerth
Flags: needinfo?(bwerth)
| Comment hidden (mozreview-request) |
| Assignee | ||
Updated•9 years ago
|
Attachment #8841797 -
Flags: review?(cam)
Updated•9 years ago
|
Blocks: stylo-bughunter
Comment 4•9 years ago
|
||
| mozreview-review | ||
Comment on attachment 8841797 [details]
Bug 1342869 Part 1: Uplift ChildSheetListBuilder into StyleSheet so that all StyleSheet subclasses can fixup parent chains when children are removed.
https://reviewboard.mozilla.org/r/115900/#review119126
::: layout/style/StyleSheet.cpp:260
(Diff revision 1)
>
> mSheets.RemoveElement(aSheet);
> }
>
> +void
> +StyleSheet::ChildSheetListBuilder::SetParentLinks(StyleSheet* aSheet) {
Nit: may as well move the brace to a new line while this code is moving.
::: layout/style/StyleSheet.cpp:268
(Diff revision 1)
> + parent->mDocumentAssociationMode);
> +}
> +
> +void
> +StyleSheet::ChildSheetListBuilder::ReparentChildList(StyleSheet* aPrimarySheet,
> + StyleSheet* aFirstChild)
Nit: fix this indentation while the code is moving.
Attachment #8841797 -
Flags: review?(cam) → review+
| Comment hidden (mozreview-request) |
Pushed by bwerth@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/c679739e5df2
Part 1: Uplift ChildSheetListBuilder into StyleSheet so that all StyleSheet subclasses can fixup parent chains when children are removed. r=heycam
| Reporter | ||
Comment 7•9 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 9 years ago
status-firefox55:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla55
Updated•9 years ago
|
status-firefox52:
--- → unaffected
status-firefox53:
--- → unaffected
status-firefox54:
--- → disabled
status-firefox-esr52:
--- → unaffected
You need to log in
before you can comment on or make changes to this bug.
Description
•