Bug 1342869 Part 1: Uplift ChildSheetListBuilder into StyleSheet so that all StyleSheet subclasses can fixup parent chains when children are removed. r=heycam

MozReview-Commit-ID: F9KnuPC0h7K